@@ -1,19 +1,19 @@
-package mx.florinda.cardapio;
+package mx.florinda.cardapio.clients;
 
-import java.io.Serializable;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 
-public class ClienteItensCardapio implements Serializable {
-
+public class ClientViaCEP {
   public static void main(String[] args) throws Exception {
 
-    URI uri = URI.create("http://localhost:8000/itensCardapio.json");
+    // URL url = new URL("https://viacep.com.br/ws/01001000/json/");
 
+    URI uri = URI.create("https://viacep.com.br/ws/01001000/json/");
 
-    try(HttpClient httpClient = HttpClient.newHttpClient()) {
+    try {
+      HttpClient httpClient = HttpClient.newHttpClient();
       HttpRequest httpRequest = HttpRequest.newBuilder(uri).build();
       HttpResponse<String> httpResponse = httpClient.send(httpRequest,
         HttpResponse.BodyHandlers.ofString());
@@ -21,6 +21,8 @@ public class ClienteItensCardapio implements Serializable {
       String body = httpResponse.body();
       System.out.println(statusCode);
       System.out.println(body);
+    } catch (Exception e) {
+      throw new RuntimeException(e);
     }
   }
 }
